Base layout work with bootstrap

--- a/app/assets/stylesheets/shared/utilities.sass
+++ b/app/assets/stylesheets/shared/utilities.sass
@@ -1,2 +1,10 @@
+body
+  margin-top: 70px
+
 .unstyled
   list-style: none
+  padding-left: 0
+
+// Flash Notifications
+.alert-notice
+  @extend .alert-warning
