--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,4 +9,40 @@ html
     = csrf_meta_tags
 
 body class=page_class
-  = yield
+  header class='navbar navbar-inverse navbar-fixed-top' role='navigation'
+    div class='container'
+      div class='navbar-header'
+        button type='button' class='navbar-toggle' data-toggle='collapse' data-target='#navbar-collapse'
+          span class='sr-only' Toggle navigation
+          span class='icon-bar'
+          span class='icon-bar'
+          span class='icon-bar'
+
+        = link_to 'Walk a Mile', root_url, class: 'navbar-brand'
+
+      div class='collapse navbar-collapse' id='navbar-collapse'
+        ul class='nav navbar-nav'
+          li
+            = link_to 'Products', products_path
+
+        ul class='nav navbar-nav navbar-right'
+          - if signed_in?
+            li
+              = link_to 'Your Account', '#'
+            li
+              = link_to 'Sign Out', sign_out_path, method: :delete
+
+          - else
+            li
+              = link_to 'Register', sign_up_path
+            li
+              = link_to 'Sign In', sign_in_path
+
+  div class='container'
+    - flash.each do |key, value|
+      div class="alert alert-#{key}"
+        button type='button' class='close' data-dismiss='alert' aria-hidden='true'
+          = '&times;'.html_safe
+        = value
+
+    = yield
