--- a/app/assets/stylesheets/shared/utilities.sass
+++ b/app/assets/stylesheets/shared/utilities.sass
@@ -1,9 +1,10 @@
 body
   margin-top: 70px
 
-.unstyled
-  list-style: none
-  padding-left: 0
+.page-header > h1
+  small
+    left: 10px
+    position: relative
 
 // Flash Notifications
 .alert-notice
