Adding and removing items from cart

--- a/app/assets/stylesheets/shared/utilities.sass
+++ b/app/assets/stylesheets/shared/utilities.sass
@@ -7,5 +7,8 @@ body
     position: relative
 
 // Flash Notifications
+.alert-error
+  @extend .alert-danger
+
 .alert-notice
   @extend .alert-warning
