--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -7,4 +7,4 @@ div class='col-sm-6 col-md-4'
       p Lorem ipsum...
 
       p
-        = link_to "$#{product.price} - Add to Cart", '#', class: 'btn btn-primary', role: 'button'
+        = cart_link_for(product)
